src/component-library/core-components/AddressFinder/AddressFinder.module.scss
@use '../../foundation/index.module' as *;
@use '../../utilities/index.module' as *;
@use '../../components/SearchBar/SearchBar.module.scss';

.wrapper {
  position: relative;
  flex-direction: column;
  color: var(--text);

  .cross {
    display: flex;
    position: absolute;
    right: $spacing-6;
    top: 50%;
    transform: translateY(-50%);
    cursor: pointer;
    opacity: 0;
  }

  .manual-button {
    margin-top: $spacing-3;
  }

  .search-wrapper {
    @extend %searchbar;

    height: var(--spacing-9);
    padding-left: $spacing-6;
  }

  &:has(.error-message) {
    color: var(--field-error-colour);

    .search-wrapper {
      color: var(--field-error-colour);
    }

    input {
      border-color: var(--field-error-colour);
    }
  }

  &:has(input:focus) {
    .cross {
      opacity: 1;
    }
  }

  .error-message {
    scroll-margin-top: px-to-rem(300);
    display: flex;
    align-items: center;
    gap: $spacing-2;
  }
}

.results {
  border: 1px solid $navy-blue-100;
  border-radius: $radius-large;
  margin-top: $spacing-1;
  padding: calc($spacing-6 - px-to-rem(11)) 0;
  overflow: auto;

  ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;

    li {
      width: 100%;

      .loader {
        padding: px-to-rem(11) $spacing-6;
        display: flex;
        justify-content: center;
        gap: $spacing-2;
      }

      button {
        @include apply-body-medium-large;

        display: flex;
        gap: $spacing-3;
        color: $navy-blue-100;
        background: transparent;
        border: 0;
        width: inherit;
        padding: px-to-rem(11) $spacing-6;

        &:hover,
        &.active {
          background-color: $orange-40;
          cursor: pointer;
        }
      }
    }
  }

  &:empty {
    display: none;
  }
}

.selected-address {
  color: var(--text);
}

.selected-controls {
  display: flex;
  margin-top: $spacing-4;
  gap: 0 $spacing-5;
}

.selected-fields {
  margin-top: $spacing-4;

  @include apply-body-medium-large;
}

.manual-fields {
  display: grid;
  gap: $spacing-5 0;
  color: var(--text);
}

.hidden {
  display: none;
}

.field-label {
  @include apply-body-medium-extra-large;
}

